objects/ApplicationFollowUpItem__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Activity Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IconURL__c</fullName>
        <label>Icon URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageType__c</fullName>
        <label>PageType</label>
        <picklist>
            <picklistValues>
                <fullName>Login Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page 8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SortNumber__c</fullName>
        <label>Sort Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TextValue__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interest</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iPadApplication__c</fullName>
        <label>iPad Application</label>
        <referenceTo>iPadApplication__c</referenceTo>
        <relationshipLabel>Application Follow Up Item</relationshipLabel>
        <relationshipName>Application_Follow_Up_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Application Follow Up Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Follow Up Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Follow Up Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>